...
            android:text="@string/app_title"
            android:textColor="@color/white"
            android:textSize="65sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/collector_home_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:backgroundTint="@color/button"
            android:fontFamily="@font/roboto"
            android:text="@string/collector_home_button"
            android:textColor="@color/button_text"
            android:textSize="15sp" />

        <Button
            android:id="@+id/visitor_home_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/button"
            android:fontFamily="@font/roboto"
...
