<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="album" type="com.laad.viniloapp.models.Album"/>
    </data>

    <FrameLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.CommentAlbumFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:text="@{album.name}"
                android:textAlignment="textStart"
                android:textColor="@color/Azul"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:text="Descripción"
                android:textAlignment="textStart"
                android:textColor="@color/Azul"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/descCommentAlbum"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="10dp"
                android:hint="Comentar Album"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/text_hint"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:text="Calificación"
                android:textAlignment="textStart"
                android:textColor="@color/Azul"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/calificaSpinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="10dp" />

            <Button
                android:id="@+id/save_comment_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/button"
                android:fontFamily="@font/roboto"
                android:text="@string/create_album_button"
                android:textColor="@color/button_text"
                android:textSize="18sp" />

        </LinearLayout>

    </FrameLayout>
</layout>