<resources>
    <string name="app_name">ViniloApp</string>
    <string name="welcome">Welcome to VinilosApp</string>
    <string name="app_title">Vinilos</string>
    <string name="collector_home_button">Coleccionista</string>
    <string name="visitor_home_button">Visitante</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="nav_header_title">Vinilos</string>
    <string name="nav_header_subtitle">Coleccionista</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_albums">Álbumes</string>
...
    <string name="invalid_image_url">Debe ingresar una URL válida para la imagen</string>
    <string name="invalid_release_date">Debe ingresar una fecha de lanzamiento válido</string>
    <string name="invalid_description">Debe ingresar una descripción válida</string>
    <string name="invalid_genre">Debe ingresar un género válido</string>
    <string name="invalid_record_label">Debe ingresar una casa discográfica válida</string>
    <string name="album_cover_description">Álbum Cover</string>
    <string name="comment_album_button">Comentar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_comment_desc">Debe ingresar una descripción valida</string>
    >>>>>>> dev
</resources>
