<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.CollectorFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/CollectorRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Fondo"
        android:layout_margin="10dp"
        tools:listitem="@layout/collector_item" />

</FrameLayout>